--- a/spring-batch-infrastructure/pom.xml
+++ b/spring-batch-infrastructure/pom.xml
@@ -39,14 +39,6 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 		</dependency>
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.easymock</groupId> -->
-<!-- 			<artifactId>easymock</artifactId> -->
-<!-- 		</dependency> -->
-<!--         <dependency> -->
-<!--             <groupId>org.easymock</groupId> -->
-<!--             <artifactId>easymockclassextension</artifactId> -->
-<!--         </dependency> -->
 		<dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjrt</artifactId>
@@ -124,6 +116,11 @@
 			<optional>true</optional>
 		</dependency>
 		<dependency>
+		  <groupId>org.hibernate</groupId>
+		  <artifactId>hibernate-validator</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
 			<groupId>org.apache.geronimo.specs</groupId>
 			<artifactId>geronimo-jta_1.1_spec</artifactId>
 			<optional>true</optional>
@@ -189,6 +186,21 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-tx</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			 <groupId>org.springframework.data</groupId>
+			 <artifactId>spring-data-commons-core</artifactId>
+			 <optional>true</optional>
+		</dependency>
+ 		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-mongodb</artifactId>
+			 <optional>true</optional>
+		</dependency>
+ 		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-neo4j</artifactId>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
