--- a/spring-batch-parent/pom.xml
+++ b/spring-batch-parent/pom.xml
@@ -371,18 +371,6 @@
 				<version>${junit.version}</version>
 				<scope>test</scope>
 			</dependency>
-<!-- 			<dependency> -->
-<!-- 				<groupId>org.easymock</groupId> -->
-<!-- 				<artifactId>easymock</artifactId> -->
-<!-- 				<version>3.1</version> -->
-<!-- 				<scope>test</scope> -->
-<!-- 			</dependency> -->
-<!-- 			<dependency> -->
-<!-- 				<groupId>org.easymock</groupId> -->
-<!-- 				<artifactId>easymockclassextension</artifactId> -->
-<!-- 				<version>3.1</version> -->
-<!-- 				<scope>test</scope> -->
-<!-- 			</dependency> -->
 			<dependency>
 				<groupId>org.apache.geronimo.specs</groupId>
 				<artifactId>geronimo-jms_1.1_spec</artifactId>
@@ -454,6 +442,11 @@
 				</exclusions>
 			</dependency>
 			<dependency>
+			  <groupId>org.hibernate</groupId>
+			  <artifactId>hibernate-validator</artifactId>
+			  <version>4.3.1.Final</version>
+			</dependency>
+			<dependency>
 				<groupId>org.hibernate</groupId>
 				<artifactId>hibernate-annotations</artifactId>
 				<version>3.3.1.GA</version>
@@ -478,12 +471,12 @@
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-api</artifactId>
-				<version>1.5.8</version>
+	 			<version>1.6.6</version>
 			</dependency>
 			<dependency>
 				<groupId>org.slf4j</groupId>
 				<artifactId>slf4j-log4j12</artifactId>
-				<version>1.5.8</version>
+	 			<version>1.6.6</version>
 			</dependency>
 			<dependency>
 				<groupId>commons-lang</groupId>
@@ -696,6 +689,30 @@
 				<version>1.9.5</version>
 				<scope>test</scope>
 			</dependency>			
+			<dependency>
+				 <groupId>org.springframework.data</groupId>
+				 <artifactId>spring-data-commons-core</artifactId>
+				 <version>1.4.0.RC1</version>
+				 <optional>true</optional>
+			</dependency>
+	  		<dependency>
+				<groupId>org.springframework.data</groupId>
+				<artifactId>spring-data-jpa</artifactId>
+				<version>1.2.0.RELEASE</version>
+				<optional>true</optional>
+			</dependency>
+	 		<dependency>
+				<groupId>org.springframework.data</groupId>
+				<artifactId>spring-data-mongodb</artifactId>
+				<version>1.1.0.RELEASE</version>
+				 <optional>true</optional>
+			</dependency>
+	 		<dependency>
+				<groupId>org.springframework.data</groupId>
+				<artifactId>spring-data-neo4j</artifactId>
+				<version>2.1.0.RELEASE</version>
+				<optional>true</optional>
+			</dependency>
 		</dependencies>
 	</dependencyManagement>
 	<distributionManagement>
