--- a/spring-batch-parent/pom.xml
+++ b/spring-batch-parent/pom.xml
@@ -141,9 +141,9 @@
 			<id>bootstrap</id>
 			<repositories>
 				<repository>
-   					<id>gemstone</id>
-   					<name>Release bundles for SQLFire and GemFire</name>
-  					 <url>http://dist.gemstone.com.s3.amazonaws.com/maven/release</url>
+					<id>gemstone</id>
+					<name>Release bundles for SQLFire and GemFire</name>
+					<url>http://dist.gemstone.com.s3.amazonaws.com/maven/release</url>
 				</repository>
 				<repository>
 					<id>objectstyle</id>
@@ -317,7 +317,7 @@
 		<pluginRepository>
 			<id>com.springsource.repository.bundles.release</id>
 			<name>SpringSource Enterprise Bundle Repository - SpringSource Bundle Releases</name>
-			<url>http://repository.springsource.com/maven/bundles/release/</url>
+			<url>http://repository.springsource.com/maven/bundles/release</url>
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
@@ -473,6 +473,10 @@
 					<exclusion>
 						<groupId>org.hibernate</groupId>
 						<artifactId>hibernate</artifactId>
+					</exclusion>
+					<exclusion>
+						<groupId>commons-logging</groupId>
+						<artifactId>commons-logging</artifactId>
 					</exclusion>
 				</exclusions>
 			</dependency>
