--- a/spring-batch-infrastructure/src/test/resources/log4j.properties
+++ b/spring-batch-infrastructure/src/test/resources/log4j.properties
@@ -4,7 +4,7 @@ log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
 log4j.appender.stdout.layout.ConversionPattern=%d %p %t [%c] - <%m>%n
 
-log4j.category.org.springframework.batch=DEBUG
+#log4j.category.org.springframework.batch=DEBUG
 log4j.category.org.springframework.transaction=INFO
 log4j.category.org.springframework.batch.support.transaction.ResourcelessTransactionManager=INFO
 log4j.category.org.springframework.jdbc.datasource=INFO
