BATCH-1935: Add quick start maven archetype

--- a/archetypes/simple-cli/src/main/resources/batch.properties
+++ b/archetypes/simple-cli/src/main/resources/batch.properties
@@ -7,5 +7,9 @@ batch.jdbc.url=jdbc:hsqldb:mem:testdb;sql.enforce_strict_size=true
 # batch.jdbc.url=jdbc:hsqldb:hsql://localhost:9005/samples
 batch.jdbc.user=sa
 batch.jdbc.password=
-batch.schema=
-batch.schema.script=org/springframework/batch/core/schema-hsqldb.sql
+batch.schema.script=classpath:org/springframework/batch/core/schema-hsqldb.sql
+batch.drop.script=classpath:org/springframework/batch/core/schema-drop-hsqldb.sql
+person.sql.location=classpath:support/person.sql
+person.test.data.location=classpath:support/sample-data.csv
+person.insert.sql=INSERT INTO people (first_name, last_name) VALUES (:firstName, :lastName)
+step1.commit.interval=5
