--- a/spring-batch-samples/pom.xml
+++ b/spring-batch-samples/pom.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<artifactId>spring-batch-samples</artifactId>
 	<packaging>jar</packaging>
@@ -17,11 +18,12 @@
 		<environment>hsql</environment>
 	</properties>
 	<dependencies>
-			<dependency>
-				<groupId>com.vmware.sqlfire</groupId>
-				<artifactId>sqlfireclient</artifactId>
-				<optional>true</optional>
-			</dependency>
+		<dependency>
+			<groupId>com.vmware.sqlfire</groupId>
+			<artifactId>sqlfireclient</artifactId>
+			<optional>true</optional>
+			<version>1.0.3</version>
+		</dependency>
 		<dependency>
 			<groupId>org.springframework.batch</groupId>
 			<artifactId>spring-batch-core</artifactId>
@@ -239,15 +241,15 @@
 			<version>1.4.1</version>
 		</dependency>
 		<dependency>
-            <groupId>org.springframework.amqp</groupId>
-            <artifactId>spring-amqp</artifactId>
-            <optional>true</optional>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.amqp</groupId>
-            <artifactId>spring-rabbit</artifactId>
-            <optional>true</optional>
-        </dependency>
+			<groupId>org.springframework.amqp</groupId>
+			<artifactId>spring-amqp</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.amqp</groupId>
+			<artifactId>spring-rabbit</artifactId>
+			<optional>true</optional>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
@@ -419,6 +421,11 @@
 			<snapshots>
 				<enabled>false</enabled>
 			</snapshots>
+		</repository>
+		<repository>
+			<id>gemstone</id>
+			<name>Release bundles for SQLFire and GemFire</name>
+			<url>http://dist.gemstone.com.s3.amazonaws.com/maven/release</url>
 		</repository>
 	</repositories>
 </project>
