--- a/spring-batch-core/pom.xml
+++ b/spring-batch-core/pom.xml
@@ -38,10 +38,10 @@
 			<optional>true</optional>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.easymock</groupId>
-			<artifactId>easymock</artifactId>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.easymock</groupId> -->
+<!-- 			<artifactId>easymock</artifactId> -->
+<!-- 		</dependency> -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
@@ -118,6 +118,11 @@
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<scope>test</scope>
 		</dependency>
 	</dependencies>
 	<build>
