--- a/spring-batch-infrastructure/pom.xml
+++ b/spring-batch-infrastructure/pom.xml
@@ -39,14 +39,14 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 		</dependency>
-		<dependency>
-			<groupId>org.easymock</groupId>
-			<artifactId>easymock</artifactId>
-		</dependency>
-        <dependency>
-            <groupId>org.easymock</groupId>
-            <artifactId>easymockclassextension</artifactId>
-        </dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.easymock</groupId> -->
+<!-- 			<artifactId>easymock</artifactId> -->
+<!-- 		</dependency> -->
+<!--         <dependency> -->
+<!--             <groupId>org.easymock</groupId> -->
+<!--             <artifactId>easymockclassextension</artifactId> -->
+<!--         </dependency> -->
 		<dependency>
 			<groupId>org.aspectj</groupId>
 			<artifactId>aspectjrt</artifactId>
@@ -205,6 +205,11 @@
             <groupId>org.springframework.amqp</groupId>
             <artifactId>spring-rabbit</artifactId>
             <optional>true</optional>
+        </dependency>
+        <dependency>
+        	<groupId>org.mockito</groupId>
+        	<artifactId>mockito-all</artifactId>
+        	<scope>test</scope>
         </dependency>
 	</dependencies>
 	<reporting>
