migration from EasyMock to Mockito

--- a/spring-batch-samples/pom.xml
+++ b/spring-batch-samples/pom.xml
@@ -250,6 +250,11 @@
 			<artifactId>spring-rabbit</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
