--- a/spring-batch-core/pom.xml
+++ b/spring-batch-core/pom.xml
@@ -119,6 +119,11 @@
 			<artifactId>log4j</artifactId>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+			<groupId>org.mockito</groupId>
+			<artifactId>mockito-all</artifactId>
+			<scope>test</scope>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
