--- a/spring-batch-infrastructure/pom.xml
+++ b/spring-batch-infrastructure/pom.xml
@@ -206,6 +206,11 @@
             <artifactId>spring-rabbit</artifactId>
             <optional>true</optional>
         </dependency>
+        <dependency>
+        	<groupId>org.mockito</groupId>
+        	<artifactId>mockito-all</artifactId>
+        	<scope>test</scope>
+        </dependency>
 	</dependencies>
 	<reporting>
 		<plugins>
