--- a/spring-batch-parent/pom.xml
+++ b/spring-batch-parent/pom.xml
@@ -690,6 +690,12 @@
 				<artifactId>spring-rabbit</artifactId>
 				<version>${spring.amqp.version}</version>
 			</dependency>
+			<dependency>
+				<groupId>org.mockito</groupId>
+				<artifactId>mockito-all</artifactId>
+				<version>1.9.5</version>
+				<scope>test</scope>
+			</dependency>			
 		</dependencies>
 	</dependencyManagement>
 	<distributionManagement>
