complete removal of EasyMock
removed easymock dependency

--- a/spring-batch-core/pom.xml
+++ b/spring-batch-core/pom.xml
@@ -38,10 +38,10 @@
 			<optional>true</optional>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.easymock</groupId>
-			<artifactId>easymock</artifactId>
-		</dependency>
+<!-- 		<dependency> -->
+<!-- 			<groupId>org.easymock</groupId> -->
+<!-- 			<artifactId>easymock</artifactId> -->
+<!-- 		</dependency> -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
