--- a/spring-batch-samples/src/main/resources/batch-sqlf.properties
+++ b/spring-batch-samples/src/main/resources/batch-sqlf.properties
@@ -1,5 +1,5 @@
 # Placeholders batch.*
-#    for Derby:
+#    for SQLFire:
 batch.jdbc.driver=com.vmware.sqlfire.jdbc.ClientDriver
 batch.jdbc.url=jdbc:sqlfire://localhost:1257/;update=true
 batch.jdbc.user=SAMPLES
@@ -7,7 +7,7 @@ batch.jdbc.password=SAMPLES
 batch.jdbc.testWhileIdle=false
 batch.jdbc.validationQuery=
 batch.jdbc.verifyCursorPosition=false
-batch.drop.script=classpath:/org/springframework/batch/core/schema-drop-derby.sql
+batch.drop.script=classpath:/org/springframework/batch/core/schema-drop-sqlf.sql
 batch.schema.script=classpath:/org/springframework/batch/core/schema-sqlf.sql
 batch.business.schema.script=business-schema-sqlf.sql
 batch.data.source.init=true
@@ -17,4 +17,6 @@ batch.lob.handler.class=org.springframework.jdbc.support.lob.DefaultLobHandler
 batch.grid.size=2
 batch.jdbc.pool.size=6
 batch.verify.cursor.position=false
+#add this for your jobRepository bean p:isolationLevelForCreate = "${batch.isolationlevel}"
+#see simple-job-launcher-context.xml for example
 batch.isolationlevel=ISOLATION_READ_COMMITTED
