Failed to add all of the files in the previous commit.  These are the other additional changes made.

--- a/spring-batch-core/src/main/sql/postgresql.properties
+++ b/spring-batch-core/src/main/sql/postgresql.properties
@@ -4,6 +4,7 @@ BIGINT = BIGINT
 IDENTITY = 
 GENERATED = 
 IFEXISTSBEFORE = IF EXISTS
+DROPCONSTRAINT = TRUE
 DOUBLE = DOUBLE PRECISION
 BLOB = BYTEA
 CLOB = TEXT
