--- a/spring-batch-core/pom.xml
+++ b/spring-batch-core/pom.xml
@@ -188,8 +188,22 @@
 										</engine>
 									</config>
 									<fileset dir="${basedir}/src/main/sql" includes="schema*.sql.vpp" />
-									<mapper type="glob" from="*.sql.vpp" to="*-derby.sql" />
+									<mapper type="glob" from="*.sql.vpp" to="*-sqlf.sql" />
 								</vppcopy>
+								<vppcopy todir="${basedir}/target/generated-resources" overwrite="true">
+									<config>
+										<context>
+											<property key="includes" value="src/main/sql" />
+											<property file="${basedir}/src/main/sql/sqlf.properties" />
+										</context>
+										<engine>
+											<property key="velocimacro.library" value="src/main/sql/sqlf.vpp" />
+										</engine>
+									</config>
+									<fileset dir="${basedir}/src/main/sql" includes="schema*.sql.vpp" />
+									<mapper type="glob" from="*.sql.vpp" to="*-sqlf.sql" />
+								</vppcopy>
+								
 								<vppcopy todir="${basedir}/target/generated-resources" overwrite="true">
 									<config>
 										<context>
