--- a/spring-batch-infrastructure/pom.xml
+++ b/spring-batch-infrastructure/pom.xml
@@ -190,7 +190,7 @@
 		</dependency>
 		<dependency>
 			 <groupId>org.springframework.data</groupId>
-			 <artifactId>spring-data-commons-core</artifactId>
+			 <artifactId>spring-data-commons</artifactId>
 			 <optional>true</optional>
 		</dependency>
  		<dependency>
@@ -201,6 +201,16 @@
  		<dependency>
 			<groupId>org.springframework.data</groupId>
 			<artifactId>spring-data-neo4j</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-gemfire</artifactId>
+			<optional>true</optional>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-redis</artifactId>
 			<optional>true</optional>
 		</dependency>
 		<dependency>
