--- a/spring-batch-parent/pom.xml
+++ b/spring-batch-parent/pom.xml
@@ -152,6 +152,11 @@
 					<name>Apache Foundation Snapshot Repository</name>
 					<url>http://people.apache.org/maven-snapshot-repository/</url>
 				</repository>
+				<repository>
+					<id>springsource-milestone</id>
+					<name>SpringSource Milestone Repository</name>
+					<url>https://repo.springsource.org/libs-milestone/</url>
+				</repository>
 			</repositories>
 			<pluginRepositories>
 				<pluginRepository>
@@ -268,21 +273,21 @@
 					<target>1.6</target>
 				</configuration>
 			</plugin>
-			<plugin>
-				<groupId>com.springsource.bundlor</groupId>
-				<artifactId>com.springsource.bundlor.maven</artifactId>
-				<version>${bundlor.version}</version>
-				<inherited>true</inherited>
-				<executions>
-					<execution>
-						<id>bundlor-transform</id>
-						<phase>compile</phase>
-						<goals>
-							<goal>bundlor</goal>
-						</goals>
-					</execution>
-				</executions>
-			</plugin>
+<!-- 			<plugin> -->
+<!-- 				<groupId>com.springsource.bundlor</groupId> -->
+<!-- 				<artifactId>com.springsource.bundlor.maven</artifactId> -->
+<!-- 				<version>${bundlor.version}</version> -->
+<!-- 				<inherited>true</inherited> -->
+<!-- 				<executions> -->
+<!-- 					<execution> -->
+<!-- 						<id>bundlor-transform</id> -->
+<!-- 						<phase>compile</phase> -->
+<!-- 						<goals> -->
+<!-- 							<goal>bundlor</goal> -->
+<!-- 						</goals> -->
+<!-- 					</execution> -->
+<!-- 				</executions> -->
+<!-- 			</plugin> -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
@@ -691,8 +696,8 @@
 			</dependency>			
 			<dependency>
 				 <groupId>org.springframework.data</groupId>
-				 <artifactId>spring-data-commons-core</artifactId>
-				 <version>1.4.0.RC1</version>
+				 <artifactId>spring-data-commons</artifactId>
+				 <version>1.5.0.RELEASE</version>
 				 <optional>true</optional>
 			</dependency>
 	  		<dependency>
@@ -711,6 +716,18 @@
 				<groupId>org.springframework.data</groupId>
 				<artifactId>spring-data-neo4j</artifactId>
 				<version>2.1.0.RELEASE</version>
+				<optional>true</optional>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.data</groupId>
+				<artifactId>spring-data-gemfire</artifactId>
+				<version>1.3.0.M1</version>
+				<optional>true</optional>
+			</dependency>
+			<dependency>
+				<groupId>org.springframework.data</groupId>
+				<artifactId>spring-data-redis</artifactId>
+				<version>1.0.3.RELEASE</version>
 				<optional>true</optional>
 			</dependency>
 		</dependencies>
