--- a/spring-batch-parent/pom.xml
+++ b/spring-batch-parent/pom.xml
@@ -273,21 +273,21 @@
 					<target>1.6</target>
 				</configuration>
 			</plugin>
-<!-- 			<plugin> -->
-<!-- 				<groupId>com.springsource.bundlor</groupId> -->
-<!-- 				<artifactId>com.springsource.bundlor.maven</artifactId> -->
-<!-- 				<version>${bundlor.version}</version> -->
-<!-- 				<inherited>true</inherited> -->
-<!-- 				<executions> -->
-<!-- 					<execution> -->
-<!-- 						<id>bundlor-transform</id> -->
-<!-- 						<phase>compile</phase> -->
-<!-- 						<goals> -->
-<!-- 							<goal>bundlor</goal> -->
-<!-- 						</goals> -->
-<!-- 					</execution> -->
-<!-- 				</executions> -->
-<!-- 			</plugin> -->
+			<plugin>
+				<groupId>com.springsource.bundlor</groupId>
+				<artifactId>com.springsource.bundlor.maven</artifactId>
+				<version>${bundlor.version}</version>
+				<inherited>true</inherited>
+				<executions>
+					<execution>
+						<id>bundlor-transform</id>
+						<phase>compile</phase>
+						<goals>
+							<goal>bundlor</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
@@ -715,7 +715,7 @@
 	 		<dependency>
 				<groupId>org.springframework.data</groupId>
 				<artifactId>spring-data-neo4j</artifactId>
-				<version>2.1.0.RELEASE</version>
+				<version>2.2.0.RELEASE</version>
 				<optional>true</optional>
 			</dependency>
 			<dependency>
