--- a/spring-batch-samples/pom.xml
+++ b/spring-batch-samples/pom.xml
@@ -232,7 +232,7 @@
 		</dependency>
 		<dependency>
 			 <groupId>org.springframework.data</groupId>
-			 <artifactId>spring-data-commons-core</artifactId>
+			 <artifactId>spring-data-commons</artifactId>
 			 <optional>true</optional>
 		</dependency>
   		<dependency>
