BATCH-1968: Upgrade to hsqldb 2.2.9

--- a/spring-batch-core/pom.xml
+++ b/spring-batch-core/pom.xml
@@ -19,7 +19,7 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>hsqldb</groupId>
+			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
 		</dependency>
 		<dependency>
