--- a/spring-batch-parent/pom.xml
+++ b/spring-batch-parent/pom.xml
@@ -513,12 +513,12 @@
 				<version>1.2.14</version>
 				<optional>true</optional>
 			</dependency>
-			<dependency>
-				<groupId>hsqldb</groupId>
-				<artifactId>hsqldb</artifactId>
-				<version>1.8.0.7</version>
-				<scope>test</scope>
-			</dependency>
+            <dependency>
+                <groupId>org.hsqldb</groupId>
+                <artifactId>hsqldb</artifactId>
+                <version>2.2.9</version>
+                <scope>test</scope>
+            </dependency>
 			<dependency>
 				<groupId>com.h2database</groupId>
 				<artifactId>h2</artifactId>
