--- a/spring-batch-samples/pom.xml
+++ b/spring-batch-samples/pom.xml
@@ -103,7 +103,7 @@
 			<scope>runtime</scope>
 		</dependency>
 		<dependency>
-			<groupId>hsqldb</groupId>
+			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
 			<scope>runtime</scope>
 		</dependency>
