--- a/spring-batch-test/pom.xml
+++ b/spring-batch-test/pom.xml
@@ -45,7 +45,7 @@
 			<artifactId>commons-dbcp</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>hsqldb</groupId>
+			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
 		</dependency>
 		<dependency>
