BATCH-1613: MultiThreadedFlatFileItemReader and FlatFilePartitioner implementations. Recently, we have faced a need to prepare a solution for speeding up Spring Batch file reading process. Since the standard FlatFileItemReader implementation is not intended for use in a multi-threaded environment, we have looked at a possibly existing solution and found the discussion on Spring Batch forum: http://forum.springsource.org/showthread.php?93151-multi-threaded-FlatFileItemReader and the https://jira.springsource.org/browse/BATCH-1613 Jira issue. Basing on the code provided by Stephane Nicoll in the forum I have prepared a pull request for your consideration. The MultiThreadedFlatFileItemReader and FlatFilePartitioner have been reworked in order to improve performance Below you can see the performance comparison on a 8 core MacBook Pro with an SSD drive. The test (which can be found in the pull request) only reads items from a temporary flat file. Though applying multiple threads for reading does not bring much in terms of the reading performance, as can be seen below, it can be useful when processing or writing step is blocking on an intensive I/O. The test simulated 10ms delay by simply calling Thread.sleep(10).
The improvements to the initial implementation include:
- Underlying file system seek function utilized in order to locate the starting point for a reading thread, so that partition processing threads do not need to read forward to the starting point;
- The partitioning occurs at the new line borders on the same first fast reading sweep over the file (measured 2 to 5 times faster performance in comparison to BufferedReader and LineNumberReader implementation); further improvements like support of multi-line records possible;
- Partitioner distributes data between partitions more evenly to avoid having a partition twice as large as the others in an unlucky case
- Some unit tests added

Performance measured on a MacBook Pro i7 8 cores with SSD drive and on
a Intel

--- a/spring-batch-core-tests/pom.xml
+++ b/spring-batch-core-tests/pom.xml
@@ -74,6 +74,12 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
+			<groupId>org.springframework.batch</groupId>
+			<artifactId>spring-batch-test</artifactId>
+			<version>${project.version}</version>
+			<scope>test</scope>
+		</dependency>
+		<dependency>
 			<groupId>commons-dbcp</groupId>
 			<artifactId>commons-dbcp</artifactId>
 		</dependency>
@@ -116,6 +122,11 @@
 			<artifactId>log4j</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<scope>test</scope>
+		</dependency>		
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-jdbc</artifactId>
@@ -161,6 +172,9 @@
 					<artifactId>maven-surefire-plugin</artifactId>
 					<configuration>
 						<junitArtifactName>junit:junit</junitArtifactName>
+						<additionalClasspathElements>
+							<additionalClasspathElement>src/test/java</additionalClasspathElement>
+						</additionalClasspathElements>
 					</configuration>
 				</plugin>
 			</plugins>
