--- a/spring-batch-parent/pom.xml
+++ b/spring-batch-parent/pom.xml
@@ -721,7 +721,7 @@
 			<dependency>
 				<groupId>org.springframework.data</groupId>
 				<artifactId>spring-data-gemfire</artifactId>
-				<version>1.3.0.M1</version>
+				<version>1.3.0.RELEASE</version>
 				<optional>true</optional>
 			</dependency>
 			<dependency>
