--- a/spring-batch-parent/pom.xml
+++ b/spring-batch-parent/pom.xml
@@ -157,7 +157,12 @@
 					<name>SpringSource Milestone Repository</name>
 					<url>https://repo.springsource.org/libs-milestone/</url>
 				</repository>
-			</repositories>
+				<repository>
+					<id>gemstone</id>
+					<name>Release bundles for SQLFire and GemFire</name>
+					<url>http://dist.gemstone.com.s3.amazonaws.com/maven/release</url>
+				</repository>
+ 			</repositories>
 			<pluginRepositories>
 				<pluginRepository>
 					<id>apache-snapshots</id>
@@ -304,6 +309,15 @@
 			</plugin>
 		</plugins>
 	</build>
+	<repositories>
+		<repository>
+			<id>neo4j-public-release-repository</id>
+			<url>http://m2.neo4j.org/releases</url>
+			<snapshots>
+				<enabled>false</enabled>
+			</snapshots>
+		</repository>
+	</repositories>
 	<pluginRepositories>
 		<pluginRepository>
 			<id>objectstyle</id>
