--- a/spring-batch-core/pom.xml
+++ b/spring-batch-core/pom.xml
@@ -124,6 +124,19 @@
 			<artifactId>mockito-all</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-commons</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.data</groupId>
+			<artifactId>spring-data-gemfire</artifactId>
+		</dependency>
+	  	<dependency>
+	  		<groupId>com.gemstone.gemfire</groupId>
+	  		<artifactId>gemfire</artifactId>
+	  		<scope>provided</scope>
+	  	</dependency>		
 	</dependencies>
 	<build>
 		<plugins>
