--- a/spring-batch-admin-parent/pom.xml
+++ b/spring-batch-admin-parent/pom.xml
@@ -3,7 +3,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>org.springframework.batch</groupId>
 	<artifactId>spring-batch-admin-parent</artifactId>
-	<version>1.2.2.BUILD-SNAPSHOT</version>
+	<version>1.3.0.BUILD-SNAPSHOT</version>
 	<name>Spring Batch Admin Parent</name>
 	<description>A set of services (Java, JSON) and a UI (webapp) for managing and launching Spring Batch jobs.</description>
 	<url>http://www.springsource.org/spring-batch-admin</url>
@@ -25,12 +25,18 @@
 			<name>Dave Syer</name>
 			<email>dsyer@vmware.com</email>
 		</developer>
+		<developer>
+			<id>mminella</id>
+			<name>Michael Minella</name>
+			<email>mminella@vmware.com</email>
+		</developer>
 	</developers>
 	<properties>
-		<maven.test.failure.ignore>true</maven.test.failure.ignore>
-		<spring.batch.version>2.1.7.RELEASE</spring.batch.version>
-		<spring.framework.version>3.0.5.RELEASE</spring.framework.version>
-		<spring.integration.version>2.0.3.RELEASE</spring.integration.version>
+		<maven.test.failure.ignore>false</maven.test.failure.ignore>
+		<spring.batch.version>2.2.0.RC1</spring.batch.version>
+		<spring.framework.version>3.2.1.RELEASE</spring.framework.version>
+		<spring.integration.version>2.2.3.RELEASE</spring.integration.version>
+		<spring.retry.version>1.0.2.RELEASE</spring.retry.version>
 	</properties>
 	<profiles>
 		<profile>
@@ -163,7 +169,7 @@
 	<build>
 		<pluginManagement>
 			<plugins>
-				<!--This plugin's configuration is used to store Eclipse m2e settings 
+				<!--This plugin's configuration is used to store Eclipse m2e settings
 					only. It has no influence on the Maven build itself. -->
 				<plugin>
 					<groupId>org.eclipse.m2e</groupId>
@@ -268,8 +274,8 @@
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>1.5</source>
-					<target>1.5</target>
+					<source>1.6</source>
+					<target>1.6</target>
 				</configuration>
 			</plugin>
 			<plugin>
