--- a/spring-batch-core/pom.xml
+++ b/spring-batch-core/pom.xml
@@ -19,6 +19,11 @@
 			<version>${project.version}</version>
 		</dependency>
 		<dependency>
+		    <groupId>javax.batch</groupId>
+		    <artifactId>javax.batch-api</artifactId>
+		    <version>1.0-b29</version>
+		</dependency>
+		<dependency>
 			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
 		</dependency>
@@ -38,10 +43,6 @@
 			<optional>true</optional>
 			<scope>test</scope>
 		</dependency>
-<!-- 		<dependency> -->
-<!-- 			<groupId>org.easymock</groupId> -->
-<!-- 			<artifactId>easymock</artifactId> -->
-<!-- 		</dependency> -->
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
