--- a/archetypes/pom.xml
+++ b/archetypes/pom.xml
@@ -14,6 +14,7 @@
   </parent>
   <modules>
     <module>simple-cli</module>
+    <module>simple-cli-javaconfig</module>
   </modules>
   <build>
     <pluginManagement>
