--- a/spring-batch-infrastructure/pom.xml
+++ b/spring-batch-infrastructure/pom.xml
@@ -136,6 +136,12 @@
 			<version>1.4</version>
 			<optional>true</optional>
 		</dependency>
+		<dependency>
+		    <groupId>javax.batch</groupId>
+		    <artifactId>javax.batch-api</artifactId>
+		    <scope>provided</scope>
+		    <optional>true</optional>
+		</dependency>
         <dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-oxm</artifactId>
