--- a/spring-batch-parent/pom.xml
+++ b/spring-batch-parent/pom.xml
@@ -600,6 +600,13 @@
 				<optional>true</optional>
 			</dependency>
 			<dependency>
+			    <groupId>javax.batch</groupId>
+			    <artifactId>javax.batch-api</artifactId>
+			    <version>1.0</version>
+			    <scope>provided</scope>
+			    <optional>true</optional>
+			</dependency>
+			<dependency>
 				<groupId>stax</groupId>
 				<artifactId>stax</artifactId>
 				<version>1.2.0</version>
