--- a/spring-batch-core/pom.xml
+++ b/spring-batch-core/pom.xml
@@ -9,7 +9,7 @@
 	<parent>
 		<groupId>org.springframework.batch</groupId>
 		<artifactId>spring-batch-parent</artifactId>
-		<version>3.0.0.BUILD-SNAPSHOT</version>
+		<version>2.2.1.RELEASE</version>
 		<relativePath>../spring-batch-parent</relativePath>
 	</parent>
 	<dependencies>
