--- a/spring-batch-core/pom.xml
+++ b/spring-batch-core/pom.xml
@@ -21,7 +21,7 @@
 		<dependency>
 		    <groupId>javax.batch</groupId>
 		    <artifactId>javax.batch-api</artifactId>
-		    <version>1.0-b29</version>
+		    <version>1.0</version>
 		</dependency>
 		<dependency>
 		    <groupId>com.ibm.jbatch</groupId>
