* changed keyword from "type" to "engine" * changed from MyISAM to InnoDB * fixed property "platform" from "oracle10g" to "mysql"

--- a/spring-batch-core/src/main/sql/mysql.properties
+++ b/spring-batch-core/src/main/sql/mysql.properties
@@ -1,8 +1,8 @@
-platform=oracle10g
+platform=mysql
 # SQL language oddities
 BIGINT = BIGINT
-IDENTITY = 
-GENERATED = 
+IDENTITY =
+GENERATED =
 VOODOO = ENGINE=InnoDB
 IFEXISTSBEFORE = IF EXISTS
 DOUBLE = DOUBLE PRECISION
