Updated version numbers Corrected SCM urls Added release plugin

--- a/spring-batch-admin-parent/pom.xml
+++ b/spring-batch-admin-parent/pom.xml
@@ -9,7 +9,7 @@
 	<url>http://www.springsource.org/spring-batch-admin</url>
 	<packaging>pom</packaging>
 	<scm>
-		<url>http://static.springframework.org/spring-batch-admin</url>
+		<url>http://github.com/SpringSource/spring-batch-admin</url>
 		<connection>scm:git:git://github.com/SpringSource/spring-batch-admin.git</connection>
 		<developerConnection>scm:git:git://github.com/SpringSource/spring-batch-admin.git</developerConnection>
 	</scm>
