BATCH-2124: Updated files to prevent the ability of inserting more than one row by accident into the sequence tables

--- a/spring-batch-core/src/main/sql/mysql.properties
+++ b/spring-batch-core/src/main/sql/mysql.properties
@@ -10,5 +10,6 @@ BLOB = BLOB
 CLOB = TEXT
 TIMESTAMP = DATETIME
 VARCHAR = VARCHAR
+CHAR = CHAR
 # for generating drop statements...
 SEQUENCE = TABLE
