BATCH-2124: Updated files to prevent the ability of inserting more than one row by accident into the sequence tables

--- a/spring-batch-core/src/main/sql/mysql.properties
+++ b/spring-batch-core/src/main/sql/mysql.properties
@@ -1,8 +1,8 @@
 platform=oracle10g
 # SQL language oddities
 BIGINT = BIGINT
-IDENTITY = 
-GENERATED = 
+IDENTITY =
+GENERATED =
 VOODOO = ENGINE=InnoDB
 IFEXISTSBEFORE = IF EXISTS
 DOUBLE = DOUBLE PRECISION
@@ -10,5 +10,6 @@ BLOB = BLOB
 CLOB = TEXT
 TIMESTAMP = DATETIME
 VARCHAR = VARCHAR
+CHAR = CHAR
 # for generating drop statements...
 SEQUENCE = TABLE
