Added jackson-mapper-asl dependency for  deserialize map . Ref#HAWT-5

--- a/spring-batch-core/pom.xml
+++ b/spring-batch-core/pom.xml
@@ -136,6 +136,12 @@
             <version>1</version>
             <scope>test</scope>
 		</dependency>
+        <dependency>
+            <groupId>org.codehaus.jackson</groupId>
+            <artifactId>jackson-mapper-asl</artifactId>
+            <version>1.6.3</version>
+            <scope>compile</scope>
+        </dependency>
 	</dependencies>
 	<build>
 		<plugins>
