--- a/spring-batch-integration/src/test/resources/config-hsql.properties
+++ b/spring-batch-integration/src/test/resources/config-hsql.properties
@@ -1,7 +1,7 @@
 # Default database platform is HSQLDB:
 batch.jdbc.driver=org.hsqldb.jdbcDriver
-batch.jdbc.url=jdbc:hsqldb:mem:testdb;sql.enforce_strict_size=true
-# Override and use this one in for a separate server process so you can inspect 
+batch.jdbc.url=jdbc:hsqldb:mem:testdb;sql.enforce_strict_size=true;hsqldb.tx=mvcc
+# Override and use this one in for a separate server process so you can inspect
 # the results (or add it to system properties with -D to override at run time).
 # batch.jdbc.url=jdbc:hsqldb:hsql://localhost:9005/samples
 batch.jdbc.user=sa
