--- a/spring-batch-parent/pom.xml
+++ b/spring-batch-parent/pom.xml
@@ -538,6 +538,12 @@
 				<scope>test</scope>
 			</dependency>
 			<dependency>
+				<groupId>org.xerial</groupId>
+				<artifactId>sqlite-jdbc</artifactId>
+				<version>3.7.2</version>
+				<scope>test</scope>
+			</dependency>
+			<dependency>
 				<groupId>org.apache.derby</groupId>
 				<artifactId>derby</artifactId>
 				<version>10.8.2.2</version>
