BATCH-2110: Updated batch to support Spring 4 * Refactored iBatis based readers and writers to not utilize  SqlMapClientTemplate. * Depricated all iBatis based readers and writers in favor of MyBatis's  native Spring support. * Updated XStream support to 1.4.4 and Jettison to 1.2 to be in  alignment with Spring 4. * Added the PooledEmbeddedDataSource to address the issue outlined in  SPR-11372.

--- a/spring-batch-samples/pom.xml
+++ b/spring-batch-samples/pom.xml
@@ -45,10 +45,10 @@
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
 		</dependency>
-		<dependency>
+ 		<dependency>
 			<groupId>org.springmodules</groupId>
 			<artifactId>spring-modules-validation</artifactId>
-			<version>0.8</version>
+			<version>0.8a</version>
 			<exclusions>
 				<exclusion>
 					<groupId>rhino</groupId>
@@ -119,7 +119,7 @@
 			<groupId>commons-dbcp</groupId>
 			<artifactId>commons-dbcp</artifactId>
 		</dependency>
-		<dependency>
+ 		<dependency>
 			<groupId>com.thoughtworks.xstream</groupId>
 			<artifactId>xstream</artifactId>
 		</dependency>
