--- a/archetypes/simple-cli/pom.xml
+++ b/archetypes/simple-cli/pom.xml
@@ -6,7 +6,6 @@
     <version>3.0.0.BUILD-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>Commandline</name>
-    <url>http://www.springframework.org/spring-batch/archetypes/simple-cli-archetype</url>
     <description>This project is a command line batch sample from Spring Batch demonstrating a typical batch job.
         The job can be invoked via "mvn exec:java" to see the job run from the command line.
         During an "mvn package", a distribution archive in the format defined in src/main/assembly/descriptor.xml will
@@ -47,7 +46,7 @@
                         <enabled>false</enabled>
                     </snapshots>
                 </pluginRepository>
-                <pluginRepository>
+<!--                 <pluginRepository>
                     <id>com.springsource.repository.bundles.release</id>
                     <name>SpringSource Enterprise Bundle Repository - SpringSource Bundle Releases</name>
                     <url>http://repository.springsource.com/maven/bundles/release</url>
@@ -55,7 +54,7 @@
                         <enabled>false</enabled>
                     </snapshots>
                 </pluginRepository>
-            </pluginRepositories>
+ -->            </pluginRepositories>
         </profile>
     </profiles>
     <dependencies>
