--- a/spring-batch-core-tests/pom.xml
+++ b/spring-batch-core-tests/pom.xml
@@ -4,7 +4,7 @@
 	<artifactId>spring-batch-core-tests</artifactId>
 	<name>Core Tests</name>
 	<description>Integration tests for the Spring Batch Core</description>
-	<url>http://static.springframework.org/spring-batch/${project.artifactId}</url>
+	<url>http://docs.spring.io/spring-batch/${project.artifactId}</url>
 	<parent>
 		<groupId>org.springframework.batch</groupId>
 		<artifactId>spring-batch-parent</artifactId>
