--- a/spring-batch-parent/pom.xml
+++ b/spring-batch-parent/pom.xml
@@ -6,12 +6,12 @@
 	<version>3.0.0.BUILD-SNAPSHOT</version>
 	<name>Spring Batch Parent</name>
 	<description>Spring Batch parent project.  Defines dependencies and common configuration for the build process.</description>
-	<url>http://static.springframework.org/spring-batch/${project.artifactId}</url>
+	<url>http://docs.spring.io/spring-batch/${project.artifactId}</url>
 	<packaging>pom</packaging>
 	<scm>
-		<url>http://github.com/SpringSource/spring-batch</url>
-		<connection>scm:git:git://github.com/SpringSource/spring-batch.git</connection>
-		<developerConnection>scm:git:git://github.com/SpringSource/spring-batch.git</developerConnection>
+		<url>https://github.com/spring-projects/spring-batch</url>
+		<connection>scm:git:git://github.com/spring-projects/spring-batch.git</connection>
+		<developerConnection>scm:git:git://github.com/spring-projects/spring-batch.git</developerConnection>
 		<tag>HEAD</tag>
 	</scm>
 	<licenses>
@@ -29,7 +29,7 @@
 		<developer>
 			<id>mminella</id>
 			<name>Michael Minella</name>
-			<email>mminella@vmware.com</email>
+			<email>mminella@gopivotal.com.com</email>
 		</developer>
 		<developer>
 			<id>cschaefer</id>
@@ -110,7 +110,7 @@
 				<repository>
 					<id>spring-milestone</id>
 					<name>Spring Milestone Repository</name>
-					<url>s3://maven.springframework.org/milestone</url>
+					<url>http://repo.spring.io/milestone</url>
 				</repository>
 			</distributionManagement>
 		</profile>
